# JetDL

./: .gitignore  .todo.md  CMakeLists.txt  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py  vcpkg.json
.github/workflows/: publish.yml  python-tests.yml
_C/: CMakeLists.txt
_C/src/: CMakeLists.txt  device.cc
_C/src/autograd/: function.c  graph.cc  linalg.cc  math.cc
_C/src/autograd/linalg/: T.cc  dot.cc  mT.cc  matmul.cc  matvec.cc  vecmat.cc
_C/src/autograd/math/: add.cc  div.cc  mean.cc  mul.cc  pow.cc  sub.cc  transcendental.cc
_C/src/autograd/nn/: relu.cc
_C/src/autograd/routines/: contiguous.cc  copy.cc  view.cc
_C/src/cuda/: allocator.cu
_C/src/linalg/: autograd.cc  linalg.cc  linalg.cpp
_C/src/linalg/product/: cpu_kernel.cc  cuda_kernel.cu  dot.cc  kernel.c  kernel.cc  kernel.cu  kernel_dispatcher.cc  matmul.c  matmul.cc  matvec.cc  vecmat.cc
_C/src/linalg/python/: bindings.cpp
_C/src/linalg/transpose/: transpose.c  transpose.cc
_C/src/math/: math.cc  math.cpp
_C/src/math/arith/: arith.c  arith.cc  kernel.c  kernel.cc  kernel_dispatcher.cc
_C/src/math/arith/cuda_kernels/: add_kernels.cu  addition_kernels.cu  div_kernels.cu  mul_kernel.cu  sub_kernels.cu
_C/src/math/functions/: kernel.c  kernel.cc  reduction.c  reduction.cc
_C/src/math/functions/power/: kernel.cc  pow.cc  sqrt.cc
_C/src/math/functions/reduction/: cuda_kernels.cu  kernel.cc  mean.cc  reduction.cc  sum.cc
_C/src/math/functions/step/: heaviside.cc
_C/src/math/functions/transcendental/: comparison.cc  exp.cc  log.cc  trig.cc
_C/src/math/ops/: arith.c  kernel.c
_C/src/math/python/: bindings.cpp
_C/src/nn/: linear.cc  relu.cc
_C/src/nn/layers/: linear.cc
_C/src/nn/losses/: mse.cc
_C/src/optim/: kernel.cc  sgd.cc
_C/src/python/: _C.cc  _C.cpp  bindings.cpp
_C/src/python/bindings/: autograd.cc  linalg.cc  math.cc  nn.cc  optim.cc  random.cc  routines.cc
_C/src/python/bindings/tensor/: tensor.cc
_C/src/python/bindings/tensor/methods/: autograd.cc  linalg.cc  math.cc  routines.cc
_C/src/python/utils/: check.cpp
_C/src/random/: cuda_kernels.cu  random.cc
_C/src/random/distributions/: normal.cc  uniform.cc
_C/src/routines/: routines.cc  routines.cpp
_C/src/routines/creation/: copy.cc  cuda_kernels.cu  ones.c  ones.cc  zeros.cc
_C/src/routines/manipulation/: contiguous.cc  shapes.cc  squeeze.cc  to_string.cc  unsqueeze.cc  view.cc
_C/src/routines/python/: bindings.cpp
_C/src/tensor/: assignment.cc  constructors.cc  linalg.cc  math.cc  methods.cc  operators.cc  tensor.c  transfer.cc
_C/src/tensor/python/: bindings.cpp  utils.cpp
_C/src/utils/: auxiliary.c  auxiliary.cc  broadcast.c  broadcast.cc  check.cc  check.cpp  device.cc  metadata.c  metadata.cc  py.cc  py.cpp  reduction.c  reduction.cc
jetdl/: __init__.py  _creation.py  _manip.py  creation.py  linalg.py  math.py  random.py  tensor.pyi
jetdl/_routines/: __init__.py  _ones.py
jetdl/_tensor/: __init__.py  _tensors.py  _tensors.pyi
jetdl/autograd/: _utils.py  arithmetic_diff.py  backward.py  backward.pyi  control_utils.py  function.py  matrix_diff.py
jetdl/function/: __init__.py  math.py  tensor_creation.py
jetdl/linalg/: __init__.py  _ops.py  _ops.pyi  _transposes.py  _transposes.pyi  matrix_products.py  ops.py  ops.pyi  product.py  product.pyi  products.py  products.pyi
jetdl/math/: __init__.py  _function.py  _function.pyi
jetdl/nn/: __init__.py  _layers.py  _loss.py  _objects.py  _param.py  linear.py  module.py
jetdl/optim/: _optim.py  _sgd.py  optimizer.py
jetdl/routines/: __init__.py  creation.py  creation.pyi
jetdl/tensor/: _C.py  __init__.py  _utils.py  tensor.py  tensor.pyi
python/: main.py  tensor.py
python/tests/: test_tensor.py  utils.py
src/: CMakeLists.txt  bindings.cpp  cpu.cpp  cpu.h  cpu_utils.cpp  cpu_utils.h  function-cpu.cpp  function-cpu.h  lib.cpp  lib.h  linalg-cpu.cpp  linalg-cpu.h  ops-cpu.cpp  ops-cpu.h  routines.cpp  routines.h  tensor.cpp  tensor.h  tensor.hpp
src/autograd/: bindings.cpp  bindings.hpp  function.hpp
src/autograd/graph/: backward.cpp  backward.hpp
src/autograd/math/: ops.hpp
src/autograd/math/ops/: ops.hpp
src/autograd/utils/: utils.hpp
src/linalg/: bindings.cpp  bindings.hpp  linalg.cpp  linalg.h  linalg.hpp  ops.cpp  ops.hpp  product-cpu.cpp  product-cpu.hpp  product.cpp  product.hpp
src/linalg/ops/: add.cpp  add.hpp  kernel.cpp  kernel.hpp
src/linalg/product/: kernel.c  kernel.cpp  kernel.h  matmul.c  matmul.cpp  matmul.h  matmul.hpp  product-cpu.cpp  product-cpu.hpp
src/linalg/python/: bindings.cpp  bindings.h
src/linalg/transpose/: transpose.c  transpose.cpp  transpose.hpp
src/math/: bindings.cpp  bindings.hpp  kernel.cpp  kernel.hpp  math.cpp  math.h  math.hpp  ops.cpp  ops.hpp
src/math/function/: kernel.cpp  kernel.hpp  reduction.cpp  reduction.hpp
src/math/functions/: kernel.c  reduction.c  reduction.h
src/math/ops/: arith.c  arith.h  kernel.c  kernel.cpp  kernel.h  ops.cpp  ops.hpp
src/math/python/: bindings.cpp  bindings.h
src/python/: _C.cpp  bindings.cpp  bindings.h  check.cpp  check.h  utils.cpp  utils.h
src/python/utils/: check.cpp  check.h
src/routines/: bindings.cpp  bindings.hpp  creation.cpp  creation.hpp  routines.cpp  routines.h
src/routines/creation/: ones.c
src/routines/python/: bindings.cpp  bindings.h
src/tensor/: bindings.cpp  tensor.c  tensor.cpp  tensor.h  tensor.hpp
src/tensor/python/: bindings.cpp  bindings.h  utils.cpp
src/utils/: auxiliary.c  auxiliary.cpp  auxiliary.h  auxillary.cpp  auxillary.hpp  broadcast.c  broadcast.cpp  broadcast.h  broadcast.hpp  check.cpp  check.hpp  metadata.c  metadata.cpp  metadata.h  metadata.hpp  reduction.c  reduction.h
tensorlite/: __init__.py  autograd.py  nn.py  optim.py  routines.py  tensor.py  utils.py
tensorlite.egg-info/: PKG-INFO
tensorlite/autograd/: __init__.py  arithmetic_diff.py  (+1 more)
tests/: test_autograd.py  test_autograd_data.py  test_function.py  test_linalg.py  test_nn.py  test_optim.py  test_routines.py  test_tensor.py  test_tensor_data.py  test_utils.py  utils.py
(+115 files in other folders)
