[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "jetdl"
version = "0.1.0"
description = "A lightweight deep learning framework with automatic differentiation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Liiban Mohamud", email = "liibanmohamud12@gmail.com"}
]
maintainers = [
    {name = "Liiban Mohamud", email = "liibanmohamud12@gmail.com"}
]
keywords = ["deep-learning", "automatic-differentiation", "tensor", "neural-networks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "setuptools>=80.9.0",
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
]
test = [
    "pytest>=7.0.0",
]